--- a/service.html
+++ b/service.html
@@ -65,22 +65,22 @@
       <div class="row py-5 m-auto">
         <div class="col-lg-5 col-md-5 col-sm-10 d-block m-auto service">
           <h3 class="text-center">Portfolio</h3>
-          <p class="text-center">If you are looling for a designer to build your own portfolio website, this is the best platform for you. I have a long time experience over web design.</p>
+          <p class="text-center">If you are looking for a designer to build your own portfolio website, this is the best platform for you. I have a long time experience over web design.</p>
           <a href="https://www.fiverr.com/s2/0f210d2f36" class="button1">Hire me</a>
         </div>
         <div class="col-lg-5 col-md-5 col-sm-10 d-block m-auto service">
           <h3 class="text-center">Company</h3>
-          <p class="text-center">If you are looling for a designer to build your own company website, this is the best platform for you. I have a long time experience over web design.</p>
+          <p class="text-center">If you are looking for a designer to build your own company website, this is the best platform for you. I have a long time experience over web design.</p>
           <a href="https://www.fiverr.com/s2/0f210d2f36" class="button1">Hire me</a>
         </div>
         <div class="col-lg-5 col-md-5 col-sm-10 d-block m-auto service">
           <h3 class="text-center">Business</h3>
-          <p class="text-center">If you are looling for a designer to build your own business website, this is the best platform for you. I have a long time experience over web design.</p>
+          <p class="text-center">If you are looking for a designer to build your own business website, this is the best platform for you. I have a long time experience over web design.</p>
           <a href="https://www.fiverr.com/s2/0f210d2f36" class="button1">Hire me</a>
         </div>
         <div class="col-lg-5 col-md-5 col-sm-10 d-block m-auto service">
           <h3 class="text-center">Institute</h3>
-          <p class="text-center">If you are looling for a designer to build your own institue website, this is the best platform for you. I have a long time experience over web design.</p>
+          <p class="text-center">If you are looking for a designer to build your own institue website, this is the best platform for you. I have a long time experience over web design.</p>
           <a href="https://www.fiverr.com/s2/0f210d2f36" class="button1">Hire me</a>
         </div>
       </div>
